Update Projects page with live demo link for greeting card generator

--- a/projects.html
+++ b/projects.html
@@ -237,7 +237,7 @@
                     <a href="https://github.com/goodboyagi/greeting-card-generator" class="project-btn btn-primary" target="_blank">
                         View Project
                     </a>
-                    <a href="#" class="project-btn btn-secondary">
+                    <a href="https://goodboyagi.github.io/greeting-card-generator/" class="project-btn btn-secondary" target="_blank">
                         Live Demo
                     </a>
                 </div>
