Update projects page to highlight DALL-E 3 image generation feature

--- a/projects.html
+++ b/projects.html
@@ -225,11 +225,13 @@
                 <h3 class="project-title">Greeting Card Generator</h3>
                 <p class="project-description">
                     An AI-powered greeting card generator that creates personalized cards using generative AI technology. 
-                    Users can input their message, select a style, and generate beautiful cards for any occasion.
+                    Features both text generation with GPT-3.5-turbo and image generation with DALL-E 3. 
+                    Users can input their message, select a style, and generate beautiful cards with matching AI-generated images for any occasion.
                 </p>
                 <div class="project-tech">
                     <span class="tech-tag">Python</span>
                     <span class="tech-tag">OpenAI API</span>
+                    <span class="tech-tag">DALL-E 3</span>
                     <span class="tech-tag">JavaScript</span>
                     <span class="tech-tag">Flask</span>
                 </div>
